<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">News</string>
    <string name="menu_gallery">Contact Us</string>
    <string name="menu_slideshow">Album</string>
    <string name="menu_details">Details</string>

    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="label_message">Message</string>
    <string name="label_send_success">Send Success</string>
    <string name="label_send_failure">Send Failure</string>
    <string name="label_failure_response">Failure receiving response</string>
    <string name="label_no_news">No news found.</string>
    <string name="label_image_description">News image</string>
    <string name="label_email_error">Please enter a valid email address</string>
    <string name="label_name_error">Please enter a valid name</string>
    <string name="label_phone_error">Please enter a valid phone number</string>
    <string name="label_message_error">Please enter a valid message</string>

</resources>