<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.presentation.ui.fragment.NewsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_news" >

        <action
            android:id="@+id/action_go_to_details"
            app:destination="@id/nav_details">

        </action>

    </fragment>

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.myapplication.presentation.ui.fragment.ContactUsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.presentation.ui.fragment.AlbumFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_details"
        android:name="com.example.myapplication.presentation.ui.fragment.NewsDetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_news_details" >

    </fragment>

</navigation>